// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
     
  </div>
</form>
`;

exports[`svelte/Form > renders correctly - with active step 2`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    <div
      id="step"
    >
      {"Field":"function","engine":"object","step":{"path":"start","fields":[]},"activeStep":"start","onFocus":"function","setActiveStep":"function","useSubscription":"function"}
    </div>
    
    
    <div
      id="step"
    >
      {"Field":"function","engine":"object","step":{"path":"end","fields":[]},"activeStep":"start","onFocus":"function","setActiveStep":"function","useSubscription":"function"}
    </div>
    
    
     
  </div>
</form>
`;

exports[`svelte/Form > renders correctly - with active step 3`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    <div
      id="step"
    >
      {"Field":"function","engine":"object","step":{"path":"start","fields":[]},"activeStep":"start","onFocus":"function","setActiveStep":"function","useSubscription":"function"}
    </div>
    
    
    <div
      id="step"
    >
      {"Field":"function","engine":"object","step":{"path":"end","fields":[]},"activeStep":"start","onFocus":"function","setActiveStep":"function","useSubscription":"function"}
    </div>
    
    
     
  </div>
</form>
`;

exports[`svelte/Form > renders correctly 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    <div
      class="perseid-form__step perseid-form__step----start"
      id="start"
    >
      <div
        class="perseid-form__step__fields"
      />
    </div>
    
    
    <div
      class="perseid-form__step perseid-form__step----end--active"
      id="end"
    >
      <div
        class="perseid-form__step__fields"
      />
    </div>
    
    
     
  </div>
</form>
`;
